tests/lean/621.lean.expected.out
621.lean:4:45-4:47: error: type expected
failed to coerse
  xs
to a type, after applying `coeSort`, result is still not a type
  xs.val
this is often due to incorrect `CoeSort` instances, the synthesized value for
  CoeSort (Subtype ϕ) α
was
  instCoeSortSubtype ϕ
